@@ -1,3 +1,7 @@
+trunk (2013-07-01):
+* mirari run --socket just runs the unikernel.
+* mirari run --xen creates a xl config file and do a xl create -c unikernel.xl.
+
 0.9.3 (2012-06-12):
 * Add a `--socket` flag to activate socket-based networking (UNIX only).
 * Do not use OPAM compiler switches any more, as that's done in the packaging now.
